feat: Bump to Minecraft 1.21.1
Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>